[package]
name = "calypso"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4"
futures = "0.3"  # Make sure futures is included
#oauth1 = "0.7.0"  # For OAuth 1.0a flow