[package]
name = "snapshot_report"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
google-sheets4 = "2.0.8+20210322"
lettre = "0.10.4"
chrono = "0.4"  # Add this line