[package]
name = "trello_updater"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
google-sheets4 = "2.0.0"
urlencoding = "2.1"  # Add this line to include the urlencoding crate